# IronMind

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.ps1  install.sh  package.json
calibration/: iurexa-legal-it.txt
docs/: ARCHITECTURE.md  CPU_CLINICAL_SCREENING.md  IK_LLAMA_NATIVE_RUNTIME.md  IUREXA_DOCUMENT_RAG.md  IUREXA_QUANTIZATION.md  IUREXA_RUNTIME.md
eval/: README.md  ironmind-100.json
lib/: clinicalScoring.mjs  clinicalScreening.mjs  contextStore.mjs  cpuPerformance.mjs  documentStore.mjs  gguf.mjs  ikEmbedded.mjs  ikWorker.mjs  imageQuality.mjs  ironkv.mjs  mathCore.mjs  nativeBackend.mjs  qwen3Prompt.mjs  qwenThinking.mjs  target.mjs  tensorMap.mjs  tokenizer.mjs  toolCalls.mjs
models/: README.md
native/: README.md  ironmind_forward.c  ironmind_forward.h  ironmind_forward_test.c  ironmind_gguf.c  ironmind_gguf.h  ironmind_gguf_test.c  ironmind_ik_daemon.cpp  ironmind_ik_native.cpp  ironmind_inspect.c  ironmind_math.c  ironmind_math.h  ironmind_math_test.c  ironmind_moe.c  ironmind_moe.h  ironmind_moe_test.c  ironmind_native.c  ironmind_quant.c  ironmind_quant.h  ironmind_quant_test.c  ironmind_qwen3.c  ironmind_qwen3.h  ironmind_qwen3_test.c  ironmind_simd.c  ironmind_simd.h  ironmind_simd_avx2.c  ironmind_simd_avx512.c  ironmind_simd_test.c  iurexa_runtime.cpp
public/: app.js  index.html  styles.css
tools/: eval-suite.mjs  extract-document.py  inspect-gguf.mjs  map-tensors.mjs  test-foundations.mjs  tokenize.mjs
