cmake_minimum_required(VERSION 3.20)
project(IronMind C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

option(IRONMIND_WITH_IK_LLAMA "Build the optional ik_llama.cpp embedded runtime probe" OFF)

add_executable(ironmind-inspect native/ironmind_inspect.c)
target_compile_definitions(ironmind-inspect PRIVATE _CRT_SECURE_NO_WARNINGS)
add_library(ironmind-math STATIC native/ironmind_math.c)
add_executable(ironmind-math-test native/ironmind_math_test.c)
target_link_libraries(ironmind-math-test PRIVATE ironmind-math)
add_library(ironmind-simd STATIC native/ironmind_simd.c native/ironmind_simd_avx2.c native/ironmind_simd_avx512.c)
add_executable(ironmind-simd-test native/ironmind_simd_test.c)
target_link_libraries(ironmind-simd-test PRIVATE ironmind-simd)
add_library(ironmind-quant STATIC native/ironmind_quant.c)
target_link_libraries(ironmind-quant PRIVATE ironmind-simd)
add_executable(ironmind-quant-test native/ironmind_quant_test.c)
target_link_libraries(ironmind-quant-test PRIVATE ironmind-quant ironmind-simd)
add_library(ironmind-gguf STATIC native/ironmind_gguf.c)
target_link_libraries(ironmind-gguf PRIVATE ironmind-quant ironmind-simd)
add_executable(ironmind-gguf-test native/ironmind_gguf_test.c)
target_link_libraries(ironmind-gguf-test PRIVATE ironmind-gguf ironmind-quant ironmind-simd)
add_library(ironmind-moe STATIC native/ironmind_moe.c)
add_executable(ironmind-moe-test native/ironmind_moe_test.c)
target_link_libraries(ironmind-moe-test PRIVATE ironmind-moe)
add_library(ironmind-forward STATIC native/ironmind_forward.c)
target_link_libraries(ironmind-forward PRIVATE ironmind-math)
add_executable(ironmind-forward-test native/ironmind_forward_test.c)
target_link_libraries(ironmind-forward-test PRIVATE ironmind-forward ironmind-math)
add_library(ironmind-qwen3 STATIC native/ironmind_qwen3.c)
target_link_libraries(ironmind-qwen3 PRIVATE ironmind-gguf ironmind-quant ironmind-math ironmind-moe ironmind-forward ironmind-simd)
add_executable(ironmind-qwen3-test native/ironmind_qwen3_test.c)
target_link_libraries(ironmind-qwen3-test PRIVATE ironmind-qwen3 ironmind-forward ironmind-gguf ironmind-quant ironmind-math ironmind-moe ironmind-simd)
add_executable(ironmind-native native/ironmind_native.c)
target_link_libraries(ironmind-native PRIVATE ironmind-qwen3 ironmind-gguf ironmind-quant ironmind-moe ironmind-forward ironmind-math ironmind-simd)

if (IRONMIND_WITH_IK_LLAMA)
  set(LLAMA_BUILD_TESTS OFF CACHE BOOL "" FORCE)
  set(LLAMA_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
  set(LLAMA_BUILD_SERVER OFF CACHE BOOL "" FORCE)
  set(LLAMA_CURL OFF CACHE BOOL "" FORCE)
  set(LLAMA_LLGUIDANCE OFF CACHE BOOL "" FORCE)
  set(GGML_NATIVE ON CACHE BOOL "" FORCE)
  set(GGML_IQK_FA_ALL_QUANTS ON CACHE BOOL "" FORCE)
  add_subdirectory(third_party/ik_llama.cpp EXCLUDE_FROM_ALL)
  add_executable(ironmind-ik-native native/ironmind_ik_native.cpp)
  target_include_directories(ironmind-ik-native PRIVATE third_party/ik_llama.cpp/include)
  target_link_libraries(ironmind-ik-native PRIVATE llama)
  add_executable(ironmind-ik-daemon native/ironmind_ik_daemon.cpp)
  target_include_directories(ironmind-ik-daemon PRIVATE third_party/ik_llama.cpp/include)
  target_link_libraries(ironmind-ik-daemon PRIVATE llama)
endif()

if (MSVC)
  target_compile_options(ironmind-inspect PRIVATE /W4)
  target_compile_options(ironmind-math PRIVATE /W4)
  target_compile_options(ironmind-math-test PRIVATE /W4)
  target_compile_options(ironmind-simd PRIVATE /W4)
  target_compile_options(ironmind-simd-test PRIVATE /W4)
  target_compile_options(ironmind-quant PRIVATE /W4)
  target_compile_options(ironmind-quant-test PRIVATE /W4)
  target_compile_options(ironmind-gguf PRIVATE /W4)
  target_compile_options(ironmind-gguf-test PRIVATE /W4)
  target_compile_options(ironmind-moe PRIVATE /W4)
  target_compile_options(ironmind-moe-test PRIVATE /W4)
  target_compile_options(ironmind-forward PRIVATE /W4)
  target_compile_options(ironmind-forward-test PRIVATE /W4)
  target_compile_options(ironmind-qwen3 PRIVATE /W4)
  target_compile_options(ironmind-qwen3-test PRIVATE /W4)
  target_compile_options(ironmind-native PRIVATE /W4)
  if (TARGET ironmind-ik-native)
    target_compile_options(ironmind-ik-native PRIVATE /W4)
  endif()
  if (TARGET ironmind-ik-daemon)
    target_compile_options(ironmind-ik-daemon PRIVATE /W4)
  endif()
  set_source_files_properties(native/ironmind_simd_avx2.c PROPERTIES COMPILE_OPTIONS "/arch:AVX2")
  set_source_files_properties(native/ironmind_simd_avx512.c PROPERTIES COMPILE_OPTIONS "/arch:AVX512")
else()
  target_compile_options(ironmind-inspect PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-math PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-math-test PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-simd PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-simd-test PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-quant PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-quant-test PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-gguf PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-gguf-test PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-moe PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-moe-test PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-forward PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-forward-test PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-qwen3 PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-qwen3-test PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(ironmind-native PRIVATE -Wall -Wextra -Wpedantic)
  if (TARGET ironmind-ik-native)
    target_compile_options(ironmind-ik-native PRIVATE -Wall -Wextra -Wpedantic)
  endif()
  if (TARGET ironmind-ik-daemon)
    target_compile_options(ironmind-ik-daemon PRIVATE -Wall -Wextra -Wpedantic)
  endif()
  set_source_files_properties(native/ironmind_simd_avx2.c PROPERTIES COMPILE_OPTIONS "-mavx2")
  set_source_files_properties(native/ironmind_simd_avx512.c PROPERTIES COMPILE_OPTIONS "-mavx512f")
endif()
